--- a/package.json
+++ b/package.json
@@ -39,5 +39,8 @@
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0",
     "webpack-merge": "^5.8.0"
+  },
+  "dependencies": {
+    "bootstrap-icons": "^1.9.1"
   }
 }
